--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=(), user-id=()" />
     <link rel="icon" href="%PUBLIC_URL%/favicon-todos.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
